Fix ListingPage baseline alignment

--- a/src/containers/ListingPage/ListingPage.css
+++ b/src/containers/ListingPage/ListingPage.css
@@ -378,7 +378,7 @@
 
 .featuresContainer {
   padding: 0 24px;
-  margin-bottom: 35px;
+  margin-bottom: 32px;
 
   @media (--viewportMedium) {
     padding: 0;
@@ -392,7 +392,7 @@
   color: var(--matterColorAnti);
 
   margin-top: 0;
-  margin-bottom: 13px;
+  margin-bottom: 16px;
   @media (--viewportMedium) {
     margin-top: 0;
     margin-bottom: 20px;
